[package]
name = "sunlu_filament_tracker"
version = "1.10.1"
edition = "2021"

[dependencies]
eframe = "0.31"
egui_extras = "0.31"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
zip = "2.2"
regex = "1.11"
rfd = "0.15"
csv = "1.3"
anyhow = "1"
directories = "6"
open = "5"
image = "0.25"
qrcode = "0.14"
roxmltree = "0.20"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
